manifests/istio-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: trial-studio-gateway
  annotations:
    cert-manager.io/cluster-issuer: vault
    cert-manager.io/private-key-algorithm: ECDSA
    cert-manager.io/duration: "336h" # 2 weeks
spec:
  gatewayClassName: istio
  listeners:
    - name: https
      hostname: "*.trial.studio"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: trial-studio-tls
      allowedRoutes:
        namespaces:
          from: All
